--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/placeholder.svg?v=2" />
+    <link rel="shortcut icon" href="/placeholder.svg?v=2" />
     <title>Raghava v1.0 - I CEO OS</title>
     <meta name="description" content="A comprehensive executive operating system for The Institution of Raghava. Universal I CEO Framework v1.2" />
     <meta name="author" content="The Institution of Raghava" />
@@ -10,11 +12,10 @@
     <meta property="og:title" content="Raghava v1.0 - I CEO OS" />
     <meta property="og:description" content="A comprehensive executive operating system for The Institution of Raghava" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
